# OpenSuperClone

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  clean.sh  install-build-requirements.sh  install-dependencies-deb.sh  install-dependencies-red.sh  install.sh  package.sh  uninstall.sh  update-pos.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  prerelease.yml  release.yml
doc/: opensupertool-p1.texi  opensupertool.texi
res/: icon_register.xcf  opensuperclone.desktop  opensupertool.desktop  oscviewer.desktop
res/install/: install-dependencies-deb.sh  install-dependencies-red.sh  install.sh  uninstall.sh
res/opensuperclone/Language/: Arabic  Chinese  English  French  German  Hindi  Indonesian  Italian  Japanese  Portuguese  Russian  Spanish
res/opensuperclone/locale/de/LC_MESSAGES/: opensuperclone.mo
res/oscscripts/: ata28_erase_sectors_pio.osc  ata28_makebad.osc  ata28_read_sectors_dma.osc  ata28_read_sectors_pio.osc  ata28_readlong.osc  ata28_write_sectors_dma.osc  ata28_write_sectors_pio.osc  ata48_erase_sectors_pio.osc  ata48_read_sectors_dma.osc  ata48_read_sectors_pio.osc  ata48_write_sectors_dma.osc  ata48_write_sectors_pio.osc  ata48_write_uncorrectable.osc  ata_disable_look_ahead.osc  ata_enable_look_ahead.osc  ata_execute_diagnostic.osc  ata_identify_device.osc  ata_idle_immediate_unload.osc  ata_rebuild_assist_disable.osc  ata_rebuild_assist_enable.osc  ata_scan_device.osc  ata_sct_error_control_timer.osc  ata_sct_readlong.osc  ata_security_remove_password.osc  ata_security_set_password.osc  ata_security_unlock.osc  ata_smart_data.osc  ata_status.osc  good_subroutines.osc  hddmenu  hddmenu.osc  hddsubmenu_custom  hddsubmenu_custom.osc  hddsubmenu_erase  hddsubmenu_erase.osc  hddsubmenu_info  hddsubmenu_info.osc  hddsubmenu_read  hddsubmenu_read.osc  hddsubmenu_security  (+22 more)
res/oscscripts/myscripts/: ata48_read_sectors_pio_usb.osc  ata48_write_uncorrectable_pattern.osc  ata_execute_diagnostic.osc  ata_identify_device.osc  ata_idle_immediate_unload.osc  ata_image_device_advanced_dma.osc  ata_image_device_dma.osc  ata_image_device_pio.osc  ata_image_device_test_dma.osc  ata_read_log_ext.osc  ata_sct_error_control_timer.osc  ata_sleep.osc  copy of wd_royl_sa_patch_02.osc  copy of wd_royl_write_rom.osc  hddsubmenu_custom  hddsubmenu_custom.osc  hgst_smart_data.osc  process_mod02.osc  rebuild_assist_disable.osc  rebuild_assist_enable.osc  rebuild_assist_read.osc  rebuild_assist_test.osc  rebuild_assist_test2.osc  runclone.osc.sh  scsi_read10.osc  scsi_read12.osc  usb_test1.osc  usb_test2.osc  usb_test3.osc  usb_test4.osc  usb_test5.osc  wd_royl_check_ram.osc  wd_royl_check_ram_v2.osc  wd_royl_check_rom.osc  wd_royl_check_rom_v2.osc  wd_royl_check_rom_v3.osc  wd_royl_chs_find_max_sector.osc  wd_royl_dump02_ram.osc  wd_royl_dump_mod01.osc  wd_royl_dump_mod32.osc  (+33 more)
res/oscviewer/Language/: Arabic  Chinese  English  French  German  Hindi  Indonesian  Italian  Japanese  Portuguese  Russian  Spanish
res/oscviewer/locale/de/LC_MESSAGES/: oscviewer.mo
res/templates/: asclepius.cfg  default.cfg  default_ssd.cfg
src/: CMakeLists.txt  Makefile  clone_gui2.c  clone_gui2.h  clone_gui3.c  clone_gui3.h  clone_gui_common.h  common.h  conditional.h  hddscviewer2.c  hddscviewer3.c  hddsuperclone.c  hddsuperclone.h  hddsuperclone_help.txt  hddsupertool_help.txt  makefile  postinst.in  prerm.in  tool.c  usbrelay.c
src/create_script_help/: Makefile  create_script_help.c
src/driver/: hddsuperclone_driver.c
src/mininvme/: CMakeLists.txt  Makefile  README.md  config.h.in  dkms.conf.in  driver.h  ioctl.c  ioctl.h  main.c  mininvme.pro  minipci.h  nvme.c  nvme.h  postinst.in  prerm.in
src/opensuperclone/: CMakeLists.txt  Makefile  asclepius.c  asclepius.h  clone_gui.c  clone_gui.h  clone_gui2.c  clone_gui2.h  clone_gui3.c  clone_gui3.h  clone_gui_common.h  clone_gui_language.c  clone_gui_language.h  commands.c  commands.h  common.c  common.h  config.h.in  io.c  io.h  opensuperclone.c  opensuperclone.glade  opensuperclone.h  opensuperclone.po  opensuperclone.pot  opensuperclone2.glade  opensuperclone3.glade  opensuperclone_EULA.txt  opensuperclone_help.txt  opensupertool_help.txt  tool.c  tool.h  usbrelay.c  usbrelay.h
src/opensuperclone/driver/: Makefile  opensuperclone_driver.c
src/opensuperclone/locale/: opensuperclone.pot
src/opensuperclone/locale/de_DE/: opensuperclone.po
src/opensuperclone/locale/en_US/: opensuperclone.po
src/opensuperclone/locale/fr_FR/: opensuperclone.po
src/opensuperclone/locale/vi_VN/: opensuperclone.po
src/oscdriver/: CMakeLists.txt  Makefile  config.h.in  dkms.conf  dkms.conf.in  oscdriver.c  postinst.in  prerm.in
src/oscviewer/: CMakeLists.txt  Makefile  config.h.in  oscviewer.c  oscviewer.glade  oscviewer.h  oscviewer2.c  oscviewer2.h  oscviewer3.c  oscviewer3.glade  oscviewer3.h
src/oscviewer/locale/: oscviewer.pot
src/oscviewer/locale/de_DE/: oscviewer.po
src/oscviewer/locale/en_US/: oscviewer.po
src/oscviewer/locale/fr_FR/: oscviewer.po
src/oscviewer/locale/vi_VN/: oscviewer.po
src/public/live_cd/pro/ddrescue/testsuite/: test.txt
src/public/live_cd/pro/ddrescueview-linux-i386/: changelog.txt  readme.txt
src/public/live_cd/pro/ddrescueview-linux-i386/source/: BlockInspector.lfm  ddrescueview.lpi  imgblockstore.pas  settings.pas
src/public/live_cd/pro/ddrescueview-linux-x86_64/source/: About.lfm  About.pas  BlockInspector.pas  GUI.lfm  GUI.pas  Parser.pas  Shared.pas  ddrescueview.lpi  ddrescueview.lpr  settings.lfm
src/public/live_cd/pro/dmde-lin32-con/: eula.txt  readme.txt
src/public/live_cd/pro/dmde-lin32-con/locals/: it.lng  tr.lng  zh-cn.lng
src/public/live_cd/pro/dmde-lin64-gui/: changelog.txt  deviohsc.txt  template.txt
src/public/live_cd/pro/dmde-lin64-gui/locals/: de.lng  es.lng  eula_ru.txt  fa.lng  fr.lng  pl.lng  pt-br.lng  pt-pt.lng  ru.lng
